samples/_failures_safe/1761800996_cb8643_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb2058ae.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_fb2058ae.c:142:73: error: expected ‘;’ at end of input
  142 |         if (mesh->vertices[i].x < mesh->bounds.min.x) mesh->bounds.min.x
      |                                                                         ^
      |                                                                         ;
./samples/SAFE/__tmp_fb2058ae.c:142:9: error: expected declaration or statement at end of input
  142 |         if (mesh->vertices[i].x < mesh->bounds.min.x) mesh->bounds.min.x
      |         ^~
./samples/SAFE/__tmp_fb2058ae.c:142:9: error: expected declaration or statement at end of input
